--- a/css/styles.css
+++ b/css/styles.css
@@ -674,7 +674,7 @@ footer {
   margin-bottom: 4px;
 }
 .comment {
-  padding-bottom: 16px;
+  margin-bottom: 16px;
 }
 
 .checkbox {
@@ -757,7 +757,7 @@ footer {
   align-items: center;
   fill: transparent;
 }
-.input:checked .span-checkbox {
+input:checked .span-checkbox {
   background-color: var(--active-link-color);
   border: none;
   fill: var(--light-background-color);
