--- a/css/styles.css
+++ b/css/styles.css
@@ -596,11 +596,14 @@ footer {
   background-color: rgba(46, 47, 66, 0.4);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.backdrop.is-hidden {
   opacity: 0;
-  pointer-events: none;
   visibility: hidden;
+  pointer-events: none;
+}
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 .modal {
   width: 408px;
@@ -661,7 +664,6 @@ footer {
 .comment {
   margin-bottom: 8px;
   margin-top: 8px;
-  margin-bottom: 4px;
 }
 .comment {
   margin-bottom: 16px;
@@ -797,7 +799,7 @@ input:checked + checkbox-label > span-checkbox {
   line-height: 1.5;
   letter-spacing: 0.04em;
   padding-left: 16px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   color: #ffffff;
   margin-left: 80px;
